# pick-up-nix

./: .aspell.en.prepl  .aspell.en.pws  .git_commit_message.txt  .gitignore  .gitmodules  .nix-profile  ARCHITECTURAL_VISION.md  Cargo.toml  FORMAL_PROOF_CRQ.md  IDEAS.md  INTEGRITY_VERIFICATION_CRQ.md  INTENT.md  PROJECT_PROCESS.md  README.md  Readme.org  TOOL_EVALUATION_SOP.md  boot.sh  bugreport.sh  build_and_report.sh  build_qa_process.sh  default.nix  dwim.sh  flake.nix  gemini_split.sh  generate_nix_graph.sh  gettargets.sh  grokai_imagine_video_gen.sh  imagine_video_gen.sh  install.sh  install_nagios.sh  install_service2.sh  install_service3.sh  memes.md  minizinc_emoji_primes.mzn  my_insight_tweet.txt  notes.org  nrpe.cfg  petals.sh  poem_tweet.txt  poetry_task.md  (+19 more)
.nix-defexpr/: channels
configurations/: android.nix  desktop.nix  optional-xorg-packages.nix
docs/: FLAKE_TUTORIAL.md  GIT_COMMIT_SOP.md  GIT_STATUS_IGNORE_SUBMODULES.md  GLOSSARY.md  LIVESTREAM_SETUP.md  LOCAL_BUILD_INSTRUCTIONS.md  MEMES.md  NIX_CONFIG_GIT_TUTORIAL.md  NIX_FOR_DEBIAN_USERS.md  NOOB_TUTORIAL.md  SOP_ADVANCED_MONADIC_AI.md  SOP_DATA_RETENTION_AND_IMMUTABILITY.md  SUBMODULE_DOCS_INDEX.md  project_observations.md  solfunmeme_communication_crq.md
home/: base.nix  emacs.nix  scientific.nix
json_to_memes_extractor/: Cargo.toml
logs/: all.txt
manifests/: provisional_flake_files.json
memetic_code/: emoji_llm_machine.py
new/: .nix-profile  FLAKE_TUTORIAL.md  NIX_FOR_DEBIAN_USERS.md  install_packages.sh  run_gemini.sh  run_gemini2.sh
qa.d/: 01_nix_builds.sh  02_nix_linters.sh
(+632 files in other folders)
