workspace = { members = ["source/github/meta-introspector/streamofrandom/livestream-tiktok-plugin/tiktok_cli_adaptor", "source/github/meta-introspector/streamofrandom/livestream-tiktok-plugin/tiktok_viewer_tracker", "tools/if-counter"] }
[package]
name = "pick-up-nix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
